--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,12 +1,15 @@
 auxiliary.org-netbeans-modules-javascript-nodejs.enabled=true
 auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_default=true
 auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=true
-auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_restart=false
+auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_restart=true
 auxiliary.org-netbeans-modules-javascript-nodejs.start_2e_args=.
-auxiliary.org-netbeans-modules-javascript-nodejs.start_2e_file=index.js
+auxiliary.org-netbeans-modules-javascript-nodejs.start_2e_file=node_modules/.bin/electron
 auxiliary.org-netbeans-modules-javascript-nodejs.sync_2e_enabled=true
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
 browser.autorefresh.Chrome.INTEGRATED=true
+browser.autorefresh.Chromium.INTEGRATED=true
 browser.highlightselection.Chrome.INTEGRATED=true
+browser.highlightselection.Chromium.INTEGRATED=true
 browser.run=false
 files.encoding=UTF-8
 project.license=gpl20
