--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "cadastre-parser",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Конвертер xml-файлов в GeoJSON на основе Electron Используется библиотека [cadXML2GeoJSON](https://github.com/filippov70/cadXML2GeoJSON) которая и выполняет конвертацию XML в GeoJSON.",
   "main": "index.js",
   "scripts": {
-      "start": "electron .",
+    "start": "node node_modules\/.bin\/electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "electron-packager . cadastre-parser --platform=linux-x64 --arch=x64 --version=0.37.2 --app-version=0.1.0 --out=dist --ignore=dist --prune"
+    "build": "electron-packager . cadastre-parser --platform=linux-x64 --arch=x64 --version=1.4.13 --app-version=0.1.0 --out=dist --ignore=dist --prune"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/filippov70/cadastre-parser.git"
   },
   "devDependencies": {
-    "electron-prebuilt": "^0.37.2",
+    "electron-prebuilt": "^1.4.13",
     "jsonfile": "*"
   },
   "author": "filippov vladislav (filippov70)",
